--- a/1.3.ipynb
+++ b/1.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,18 +159,14 @@
     "        self.df = self.load_and_preprocess_data(file_path)\n",
     "        \n",
     "    def load_and_preprocess_data(self, file_path: str) -> pd.DataFrame:\n",
-    "        # Load data\n",
     "        df = pd.read_csv(file_path)\n",
     "        \n",
-    "        # Extract store numbers from presence_russia\n",
     "        df['total_stores'] = df['presence_russia'].apply(self._extract_store_numbers)\n",
     "        \n",
-    "        # Process regions\n",
     "        df['num_regions'] = df['presence_regions'].fillna('').apply(\n",
     "            lambda x: len(x.split(';')) if x else 0\n",
     "        )\n",
     "        \n",
-    "        # Create store categories based on total_stores\n",
     "        df['store_category'] = pd.qcut(df['total_stores'], \n",
     "                                     q=4, \n",
     "                                     labels=['Малые', 'Средние', 'Крупные', 'Очень крупные'])\n",
@@ -192,7 +188,6 @@
     "            return 0\n",
     "    \n",
     "    def task1_general_statistics(self):\n",
-    "        \"\"\"Task 1: Общая статистика\"\"\"\n",
     "        print(\"\\nЗадача 1: Общая статистика по рынку\")\n",
     "        print(\"-\" * 50)\n",
     "        print(f\"Всего ритейлеров: {len(self.df)}\")\n",
@@ -201,7 +196,6 @@
     "        print(\"\\nРаспределение по категориям:\")\n",
     "        print(self.df['store_category'].value_counts())\n",
     "        \n",
-    "        # График 1: Распределение количества магазинов\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.histplot(data=self.df, x='total_stores', bins=30)\n",
     "        plt.title('Распределение количества магазинов')\n",
@@ -209,7 +203,6 @@
     "        plt.ylabel('Частота')\n",
     "        plt.show()\n",
     "        \n",
-    "        # График 2: Распределение по категориям\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.countplot(data=self.df, x='store_category')\n",
     "        plt.title('Распределение ритейлеров по категориям')\n",
@@ -219,7 +212,6 @@
     "        plt.show()\n",
     "        \n",
     "    def task2_domain_analysis(self):\n",
-    "        \"\"\"Task 2: Анализ по специализациям\"\"\"\n",
     "        print(\"\\nЗадача 2: Анализ по специализациям\")\n",
     "        print(\"-\" * 50)\n",
     "        \n",
@@ -233,7 +225,6 @@
     "        print(\"Топ-5 специализаций по количеству сетей:\")\n",
     "        print(domain_stats.sort_values('Количество сетей', ascending=False).head())\n",
     "        \n",
-    "        # График 3: Распределение по специализациям\n",
     "        plt.figure(figsize=(12, 6))\n",
     "        top_domains = domain_stats.nlargest(10, 'Количество сетей').index\n",
     "        sns.boxplot(data=self.df[self.df['domain'].isin(top_domains)], \n",
@@ -243,7 +234,6 @@
     "        plt.show()\n",
     "        \n",
     "    def task3_expansion_analysis(self):\n",
-    "        \"\"\"Task 3: Анализ экспансии\"\"\"\n",
     "        print(\"\\nЗадача 3: Анализ экспансии\")\n",
     "        print(\"-\" * 50)\n",
     "        \n",
@@ -252,7 +242,6 @@
     "        print(\"Средний показатель экспансии (регионов на магазин):\")\n",
     "        print(self.df.groupby('store_category')['expansion_ratio'].mean().round(3))\n",
     "        \n",
-    "        # График 4: Scatter plot экспансии\n",
     "        plt.figure(figsize=(12, 6))\n",
     "        sns.scatterplot(data=self.df, x='total_stores', y='num_regions', \n",
     "                       hue='domain', alpha=0.6)\n",
@@ -264,11 +253,9 @@
     "        plt.show()\n",
     "        \n",
     "    def task4_custom_analysis(self):\n",
-    "        \"\"\"Task 4: Дополнительный анализ\"\"\"\n",
     "        print(\"\\nЗадача 4: Дополнительный анализ\")\n",
     "        print(\"-\" * 50)\n",
     "        \n",
-    "        # Анализ концентрации рынка\n",
     "        market_concentration = (\n",
     "            self.df.groupby('domain')['total_stores']\n",
     "            .agg(['count', 'sum'])\n",
@@ -281,7 +268,6 @@
     "        print(\"Концентрация рынка по специализациям:\")\n",
     "        print(market_concentration.head())\n",
     "        \n",
-    "        # График концентрации рынка\n",
     "        plt.figure(figsize=(12, 6))\n",
     "        market_concentration.head(10)['market_share'].plot(kind='bar')\n",
     "        plt.title('Доля рынка по специализациям (топ-10)')\n",
@@ -291,14 +277,12 @@
     "        plt.tight_layout()\n",
     "        plt.show()\n",
     "        \n",
-    "        # Корреляционный анализ\n",
     "        correlation = self.df['total_stores'].corr(self.df['num_regions'])\n",
     "        print(f\"\\nКорреляция между количеством магазинов и регионов: {correlation:.2f}\")\n",
     "\n",
     "def main():\n",
     "    analysis = RetailAnalysis('https://raw.githubusercontent.com/zalig/cu-datasets/main/expansion.csv')\n",
     "    \n",
-    "    # Выполнение всех задач с выводом результатов и графиков\n",
     "    analysis.task1_general_statistics()\n",
     "    analysis.task2_domain_analysis()\n",
     "    analysis.task3_expansion_analysis()\n",
@@ -306,6 +290,14 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Presentation\n",
+    "https://docs.google.com/presentation/d/1OYpWLWLytBremigycI-q825NK_25uuxz5Qzm8jncWvE/edit?usp=sharing"
    ]
   }
  ],
